# code-jam-10-qualifier

./: pyproject.toml
qualifier/: qualifier.py  qualifier_2.py
